--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 </head>
 <body>
     <header>
-        <h1><center>VISHWA M</center></h1>
+        <h1><center>SANTHOSH RAJ K</center></h1>
         <div class="contact-info">
-            <p>Phone: +91 7550031709  | Email: <a href="mailto:vishwamurugan1709@gmail.com">vishwamurugan1709@gmail.com</a></p>
+            <p>Phone: +91 9345693386  | Email: <a href="mailto: santhoshrajk1812@gmail.com">santhoshrajk1812@gmail.com</a></p>
         </div>
-        <p>Address: No.4, Bhagavathi Nagar, 3rd Street, Nandhivaram, Guduvancheri - 603202.</p>
+        <p>Address: No.77, Udhaya Suriyan Nagar, Guduvancheri - 603202.</p>
     </header>
     <hr>
 
     <section class="objective">
         <div class="section-title">Objective</div>
-        <p>I possess knowledge in Python, HTML, CSS, Data Science (DS), and Machine Learning (ML), and I am actively pursuing further learning in various related fields.</p>
+        <p>.</p>
     </section>
     <hr>
 
